--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Descomplicando os mocks</title>
     <link rel="stylesheet" href="css/reveal.css">
     <link rel="stylesheet" href="css/theme/simple.css" id="theme">
-    <link rel="stylesheet" href="lib/css/zenburn.css">
+    <link rel="stylesheet" href="static/css/zenburn.css">
     <style>
         .reveal h1, .reveal h2, .reveal h3,
         .reveal h4, .reveal h5{
@@ -523,7 +523,7 @@
             </section>
         </div>
     </div>
-<script src="lib/js/head.min.js"></script>
+<script src="static/js/head.min.js"></script>
 <script src="js/reveal.js"></script>
 <script>
 
@@ -543,7 +543,7 @@
 
         // Optional libraries used to extend on reveal.js
         dependencies: [
-        { src: 'lib/js/classList.js',
+        { src: 'static/js/classList.js',
           condition: function() { return !document.body.classList; } },
         { src: 'plugin/markdown/marked.js',
           condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
